# SQRLL_Encryption

./: CMakeLists.txt  README.md
Encryption/: CMakeLists.txt
Encryption/Sources/: SQRLLEncryption.cpp  SQRLLEncryption.h
Sources/: EncryptionUtil.cpp  EncryptionUtil.h
Tests/: CMakeLists.txt  EncryptionTests.cpp  README.md
